--- a/charts/csi-baremetal-operator/templates/rbac.yaml
+++ b/charts/csi-baremetal-operator/templates/rbac.yaml
@@ -39,6 +39,7 @@ rules:
   verbs:
   - "*"
 # Required for Openshift only
+# TODO Deploy only when OpenShift - https://github.com/dell/csi-baremetal/issues/422
 - apiGroups:
   - config.openshift.io
   resources:
