[ISSUE-417] Fix CSI deployment via Operator on Openshift (#39)
Signed-off-by: safronovD <danil_safronov@dell.com>

--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -83,6 +83,7 @@ spec:
     metrics:
       path: {{ .Values.scheduler.metrics.path }}
       port: {{ .Values.scheduler.metrics.port }}
+    extenderPort: {{ .Values.scheduler.extender.port | quote }}
     patcher:
       enable: {{ .Values.scheduler.patcher.enable }}
       image:
