--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -117,6 +117,9 @@ scheduler:
     path: /metrics
     port: 8787
 
+  extender:
+    port: 8889
+
   # Patcher settings
   patcher:
     enable: false
@@ -151,4 +154,5 @@ nodeController:
     path: /metrics
     port: 8787
 
+# TODO Move parameter to Operator chart - https://github.com/dell/csi-baremetal/issues/422
 platform: "vanilla"
