--- a/charts/csi-baremetal-operator/templates/manager.yaml
+++ b/charts/csi-baremetal-operator/templates/manager.yaml
@@ -27,9 +27,10 @@ spec:
         name: manager
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         resources:
+          # Memory limit is increased due to bug in OpenShift 4.6 - https://bugzilla.redhat.com/show_bug.cgi?id=1904558
           limits:
             cpu: 100m
-            memory: 30Mi
+            memory: 100Mi
           requests:
             cpu: 100m
             memory: 20Mi
