--- a/charts/csi-baremetal-operator/templates/rbac.yaml
+++ b/charts/csi-baremetal-operator/templates/rbac.yaml
@@ -38,6 +38,14 @@ rules:
   - "*"
   verbs:
   - "*"
+# Required for Openshift only
+# TODO Deploy only when OpenShift - https://github.com/dell/csi-baremetal/issues/422
+- apiGroups:
+  - config.openshift.io
+  resources:
+  - schedulers
+  verbs:
+  - "*"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
