Mount alerts configuration functionality
Signed-off-by: Mikhail Borisov <mikhail.borisov@emc.com>

--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -71,7 +71,7 @@ spec:
       image:
         name: {{ .Values.driver.logReceiver.fluentbitAgent.image.name | default "fluent-bit" }}
         tag: {{ .Values.driver.logReceiver.fluentbitAgent.image.tag | default "shippable" }}
-    deployAlertsConfig: {{ .Values.driver.alerts.deployConfig }}
+    mountAlertsConfig: {{ .Values.driver.alerts.mountConfig }}
   scheduler:
     enable: {{ .Values.scheduler.enable }}
     image:
