mount alerts conf to the node
Signed-off-by: Mikhail Borisov <mikhail.borisov@emc.com>

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -13,8 +13,8 @@ spec:
     listKind: DeploymentList
     plural: deployments
     shortNames:
-      - csi
-      - csis
+      - bmcsi
+      - bmcsis
     singular: deployment
   scope: Namespaced
   version: v1
