--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -22,6 +22,11 @@ spec:
     - name: v1
       served: true
       storage: true
+  additionalPrinterColumns:
+    - name: READY
+      type: boolean
+      description: CSI Baremetal Deployment installation status
+      JSONPath: .status.ready
 status:
   acceptedNames:
     kind: ""
