--- a/.golangci.yml
+++ b/.golangci.yml
@@ -56,10 +56,10 @@ linters:
     - maligned
     - prealloc
     - dupl
+    - gosec
 
   # don't enable:
-  # - gosec Because CSI uses lsblk servers for now
-  # - gochecknoglobals Because of NodeAllocatedDisks map
+  # - gochecknoglobals Because of setupMgr and CrushVolumes // TODO - https://github.com/dell/csi-baremetal/issues/474
   # - godox CSI now has a lot TODOs in source code
   # - wsl
   # - stylecheck because it is similar to golint and there is conflict between them
