--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -10,6 +10,7 @@ metadata:
 spec:
   platform: {{ .Values.platform }}
   globalRegistry: {{ .Values.global.registry }}
+  registrySecret: {{ .Values.global.registrySecret }}
   pullPolicy: {{ .Values.image.pullPolicy }}
   nodeIDAnnotation: {{ .Values.feature.usenodeannotation }}
   {{- if and (.Values.nodeSelector.key) (.Values.nodeSelector.value)}}
