--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -18,7 +18,7 @@ feature:
   extender: true
   # reserve place only for one pod at the same time
   # the option improves place planning for LVG volumes, but decreases CSI performance on the scheduling phase!
-  consistentLVGReservation: false
+  consistentLVGReservation: true
   # enable node-controller
   # need for node replacement and node removal features
   usenodeannotation: true
@@ -51,7 +51,7 @@ driver:
         endpoint: tcp://localhost:8888
     deployConfig: false
     amountOfLoopDevices: 3
-    sizeOfLoopDevices: 101Mi
+    sizeOfLoopDevices: 140Mi
 
   # Sidecars parameters
   provisioner:
