--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -68,6 +68,7 @@ jobs:
         path: ./coverage.html
 
     - name: Upload coverage report to codecov
+      continue-on-error: true
       uses: codecov/codecov-action@v1.0.2
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
