--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_availablecapacities.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_availablecapacities.yaml
@@ -8,6 +8,23 @@ metadata:
   creationTimestamp: null
   name: availablecapacities.csi-baremetal.dell.com
 spec:
+  additionalPrinterColumns:
+  - JSONPath: .spec.Location
+    description: Drive/LVG UUID used by AvailableCapacity
+    name: LOCATION
+    type: string
+  - JSONPath: .spec.NodeId
+    description: Node id of Available Capacity
+    name: NODE
+    type: string
+  - JSONPath: .spec.storageClass
+    description: StorageClass of AvailableCapacity
+    name: STORAGE CLASS
+    type: string
+  - JSONPath: .spec.Size
+    description: Size of AvailableCapacity
+    name: SIZE
+    type: string
   group: csi-baremetal.dell.com
   names:
     kind: AvailableCapacity
@@ -18,6 +35,7 @@ spec:
     - acs
     singular: availablecapacity
   scope: Cluster
+  subresources: {}
   validation:
     openAPIV3Schema:
       description: AvailableCapacity is the Schema for the availablecapacities API
@@ -52,23 +70,6 @@ spec:
   - name: v1
     served: true
     storage: true
-  additionalPrinterColumns:
-    - name: LOCATION
-      type: string
-      description: Drive/LVG UUID used by AvailableCapacity
-      JSONPath: .spec.Location
-    - name: NODE
-      type: string
-      description: Node id of Available Capacity
-      JSONPath: .spec.NodeId
-    - name: STORAGE CLASS
-      type: string
-      description: StorageClass of AvailableCapacity
-      JSONPath: .spec.storageClass
-    - name: SIZE
-      type: string
-      description: Size of AvailableCapacity
-      JSONPath: .spec.Size
 status:
   acceptedNames:
     kind: ""
