--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_drives.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_drives.yaml
@@ -53,6 +53,7 @@ spec:
   subresources: {}
   validation:
     openAPIV3Schema:
+      description: Drive is the Schema for the drives API kubebuilder:object:generate=false
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
