[ISSUE-479] Refactor capacity planning for ACR (#51)
Signed-off-by: safronovD <danil_safronov@dell.com>

--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -18,6 +18,7 @@ spec:
     key: {{.Values.nodeSelector.key}}
     value: {{.Values.nodeSelector.value}}
   {{- end }}
+  sequentialLVGReservation: {{ .Values.feature.sequentialLVGReservation }}
   driver:
     controller:
       image:
