change to green - update pull policy
Signed-off-by: Mikhail Borisov <mikhail.borisov@emc.com>

--- a/charts/csi-baremetal-operator/values.yaml
+++ b/charts/csi-baremetal-operator/values.yaml
@@ -6,5 +6,5 @@ global:
 # Image pull settings
 image:
   name: csi-baremetal-operator
-  tag: latest
-  pullPolicy: IfNotPresent
+  tag: green
+  pullPolicy: Always
