--- a/charts/csi-baremetal-operator/templates/manager.yaml
+++ b/charts/csi-baremetal-operator/templates/manager.yaml
@@ -4,16 +4,19 @@ metadata:
   name: csi-baremetal-operator
   namespace: {{ .Release.Namespace }}
   labels:
-    control-plane: controller-manager
+    app: csi-baremetal
+    app.kubernetes.io/name: csi-baremetal
 spec:
   selector:
     matchLabels:
-      control-plane: controller-manager
+      name: {{ .Release.Name }}
   replicas: 1
   template:
     metadata:
       labels:
-        control-plane: controller-manager
+        name: {{ .Release.Name }}
+        app: csi-baremetal
+        app.kubernetes.io/name: csi-baremetal
         # release label used by fluentbit to make "release" folder
         release: {{ .Release.Name }}
     spec:
