--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_availablecapacities.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_availablecapacities.yaml
@@ -1,30 +1,13 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: availablecapacities.csi-baremetal.dell.com
 spec:
-  additionalPrinterColumns:
-  - JSONPath: .spec.Size
-    description: Size of AvailableCapacity
-    name: SIZE
-    type: string
-  - JSONPath: .spec.storageClass
-    description: StorageClass of AvailableCapacity
-    name: STORAGE CLASS
-    type: string
-  - JSONPath: .spec.Location
-    description: Drive/LVG UUID used by AvailableCapacity
-    name: LOCATION
-    type: string
-  - JSONPath: .spec.NodeId
-    description: Node id of Available Capacity
-    name: NODE
-    type: string
   group: csi-baremetal.dell.com
   names:
     kind: AvailableCapacity
@@ -35,41 +18,57 @@ spec:
     - acs
     singular: availablecapacity
   scope: Cluster
-  subresources: {}
-  validation:
-    openAPIV3Schema:
-      description: AvailableCapacity is the Schema for the availablecapacities API
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          properties:
-            Location:
-              type: string
-            NodeId:
-              type: string
-            Size:
-              format: int64
-              type: integer
-            storageClass:
-              type: string
-          type: object
-      type: object
-  version: v1
   versions:
-  - name: v1
+  - additionalPrinterColumns:
+    - description: Size of AvailableCapacity
+      jsonPath: .spec.Size
+      name: SIZE
+      type: string
+    - description: StorageClass of AvailableCapacity
+      jsonPath: .spec.storageClass
+      name: STORAGE CLASS
+      type: string
+    - description: Drive/LVG UUID used by AvailableCapacity
+      jsonPath: .spec.Location
+      name: LOCATION
+      type: string
+    - description: Node id of Available Capacity
+      jsonPath: .spec.NodeId
+      name: NODE
+      type: string
+    name: v1
+    schema:
+      openAPIV3Schema:
+        description: AvailableCapacity is the Schema for the availablecapacities API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            properties:
+              Location:
+                type: string
+              NodeId:
+                type: string
+              Size:
+                format: int64
+                type: integer
+              storageClass:
+                type: string
+            type: object
+        type: object
     served: true
     storage: true
+    subresources: {}
 status:
   acceptedNames:
     kind: ""
