--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_availablecapacityreservations.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_availablecapacityreservations.yaml
@@ -1,32 +1,13 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: availablecapacityreservations.csi-baremetal.dell.com
 spec:
-  additionalPrinterColumns:
-  - JSONPath: .spec.Namespace
-    description: Pod namespace
-    name: NAMESPACE
-    type: string
-  - JSONPath: .spec.Status
-    description: Status of AvailableCapacityReservation
-    name: STATUS
-    type: string
-  - JSONPath: .spec.NodeRequests.Requested
-    description: List of requested nodes
-    name: REQUESTED NODES
-    priority: 1
-    type: string
-  - JSONPath: .spec.NodeRequests.Reserved
-    description: List of reserved nodes
-    name: RESERVED NODES
-    priority: 1
-    type: string
   group: csi-baremetal.dell.com
   names:
     kind: AvailableCapacityReservation
@@ -37,71 +18,89 @@ spec:
     - acrs
     singular: availablecapacityreservation
   scope: Cluster
-  subresources: {}
-  validation:
-    openAPIV3Schema:
-      description: AvailableCapacityReservation is the Schema for the availablecapacitiereservations
-        API
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          properties:
-            Namespace:
-              type: string
-            NodeRequests:
-              properties:
-                Requested:
-                  description: requested - filled by scheduler/extender
-                  items:
-                    type: string
-                  type: array
-                Reserved:
-                  description: reserved - filled by csi driver controller
-                  items:
-                    type: string
-                  type: array
-              type: object
-            ReservationRequests:
-              items:
+  versions:
+  - additionalPrinterColumns:
+    - description: Pod namespace
+      jsonPath: .spec.Namespace
+      name: NAMESPACE
+      type: string
+    - description: Status of AvailableCapacityReservation
+      jsonPath: .spec.Status
+      name: STATUS
+      type: string
+    - description: List of requested nodes
+      jsonPath: .spec.NodeRequests.Requested
+      name: REQUESTED NODES
+      priority: 1
+      type: string
+    - description: List of reserved nodes
+      jsonPath: .spec.NodeRequests.Reserved
+      name: RESERVED NODES
+      priority: 1
+      type: string
+    name: v1
+    schema:
+      openAPIV3Schema:
+        description: AvailableCapacityReservation is the Schema for the availablecapacitiereservations
+          API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            properties:
+              Namespace:
+                type: string
+              NodeRequests:
                 properties:
-                  CapacityRequest:
-                    description: request per volume filled by scheduler/extender
-                    properties:
-                      Name:
-                        type: string
-                      Size:
-                        format: int64
-                        type: integer
-                      StorageClass:
-                        type: string
-                    type: object
-                  Reservations:
-                    description: reservation filled by csi driver controller
+                  Requested:
+                    description: requested - filled by scheduler/extender
+                    items:
+                      type: string
+                    type: array
+                  Reserved:
+                    description: reserved - filled by csi driver controller
                     items:
                       type: string
                     type: array
                 type: object
-              type: array
-            Status:
-              type: string
-          type: object
-      type: object
-  version: v1
-  versions:
-  - name: v1
+              ReservationRequests:
+                items:
+                  properties:
+                    CapacityRequest:
+                      description: request per volume filled by scheduler/extender
+                      properties:
+                        Name:
+                          type: string
+                        Size:
+                          format: int64
+                          type: integer
+                        StorageClass:
+                          type: string
+                      type: object
+                    Reservations:
+                      description: reservation filled by csi driver controller
+                      items:
+                        type: string
+                      type: array
+                  type: object
+                type: array
+              Status:
+                type: string
+            type: object
+        type: object
     served: true
     storage: true
+    subresources: {}
 status:
   acceptedNames:
     kind: ""
