--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Calculate version
-        run: echo "RELEASE_VERSION=${github.ref.split('-')[0].strip('v')}" >> $GITHUB_ENV
+        id: version
+        run: echo "${ github.ref.split('-')[0][1:] }${ git rev-parse --short HEAD }"
 
       - name: Download Binary
         uses: wei/wget@v1
         with:
-          args: ${{ env.builds_url }}/csi-operator/${{ env.RELEASE_VERSION }}/csi-baremetal-operator-${{ env.RELEASE_VERSION }}.tgz
+          args: ${{ env.builds_url }}/csi-operator/${{ steps.version.outputs }}/csi-baremetal-operator-${{ steps.version.outputs }}.tgz
 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -30,7 +31,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           name: Release ${{ github.ref }}
           prerelease: true
-          files: ./csi-baremetal-operator-${{ env.RELEASE_VERSION }}.tgz
+          files: ./csi-baremetal-operator-${{ steps.version.outputs }}.tgz
         if: startsWith(github.ref, 'refs/tags/')
 
       - name: Configure Git
