* allow null * set default values
Signed-off-by: romank <roman_kiselenko@dell.com>

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -183,6 +183,7 @@ spec:
                     type: object
                 type: object
               globalRegistry:
+                nullable: true
                 type: string
               nodeController:
                 description: NodeController represent operator for CSI bare-metal nodes
@@ -227,18 +228,21 @@ spec:
                     type: string
                 type: object
               platform:
+                default: vanilla
                 enum:
                 - rke
                 - openshift
                 - vanilla
                 type: string
               pullPolicy:
+                default: IfNotPresent
                 enum:
                 - IfNotPresent
                 - Always
                 - Never
                 type: string
               registrySecret:
+                nullable: true
                 type: string
               scheduler:
                 description: Scheduler encapsulates information to deploy CSI scheduler
